--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,26 +25,34 @@ header:
     url: /archive.html
 
   - titles:
-      # @start locale config
-      en      : &EN       About
+      en      : &EN       Guestbook
       en-GB   : *EN
       en-US   : *EN
       en-CA   : *EN
       en-AU   : *EN
-      zh-Hans : &ZH_HANS  关于
+      zh-Hans : &ZH_HANS  留言板
       zh      : *ZH_HANS
       zh-CN   : *ZH_HANS
       zh-SG   : *ZH_HANS
-      zh-Hant : &ZH_HANT  關於
+      zh-Hant : &ZH_HANT  留言板
       zh-TW   : *ZH_HANT
       zh-HK   : *ZH_HANT
-      ko      : &KO       소개
-      ko-KR   : *KO
-      fr      : &KO       À propos
-      fr-BE   : *FR
-      fr-CA   : *FR
-      fr-CH   : *FR
-      fr-FR   : *FR
-      fr-LU   : *FR
+    
+    url: /guestbook.html
+
+  - titles:
+      # @start locale config
+      en      : &EN       Profile
+      en-GB   : *EN
+      en-US   : *EN
+      en-CA   : *EN
+      en-AU   : *EN
+      zh-Hans : &ZH_HANS  简介
+      zh      : *ZH_HANS
+      zh-CN   : *ZH_HANS
+      zh-SG   : *ZH_HANS
+      zh-Hant : &ZH_HANT  簡介
+      zh-TW   : *ZH_HANT
+      zh-HK   : *ZH_HANT
       # @end locale config
-    url: /about.html
+    url: /profile.html
