--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -43,13 +43,14 @@ sources:
   bootcdn:
     font_awesome: 'https://use.fontawesome.com/releases/v5.0.13/css/all.css'
     jquery: 'https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js'
-    # leancloud_js_sdk: '//cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js'
-    leancloud_js_sdk: 'https://unpkg.com/leancloud-storage@3.13.2/dist/av-min.js'
+    leancloud_js_sdk: 'https://cdn.jsdelivr.net/npm/leancloud-storage@3.13.2/dist/av-min.js'
+    # leancloud_js_sdk: 'https://unpkg.com/leancloud-storage@3.13.2/dist/av-min.js'
     chart: 'https://cdn.bootcss.com/Chart.js/2.7.2/Chart.bundle.min.js'
     gitalk:
       js: 'https://cdn.bootcss.com/gitalk/1.2.2/gitalk.min.js'
       css: 'https://cdn.bootcss.com/gitalk/1.2.2/gitalk.min.css'
-    valine: 'https://unpkg.com/valine/dist/Valine.min.js' # bootcdn not available
+    valine: 'https://cdn.jsdelivr.net/npm/valine/dist/Valine.min.js'
+    # valine: 'https://unpkg.com/valine/dist/Valine.min.js' # bootcdn not available
     mathjax: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-chtml.min.js'
     # mathjax: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-chtml.min.js'
     # mathjax: 'https://cdn.bootcdn.net/ajax/libs/mathjax/3.2.2/es5/tex-chtml.min.js'
