Try to add `jekyll-target-blank`

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : # the base hostname & protocol for your site e.g. https://www.someone.com
+url     : "https://blog.lost-msth.cn"  # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   :  "Lost's Blog" #Your Site Title
 description: > # this means to ignore newlines until "Language & timezone"
@@ -223,3 +223,6 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jemoji
+
+gems:
+  - jekyll-target-blank
